--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,11 @@ screenshots/
 # Sobelow
 .sobelow
 
-# osx 
+# osx
 .DS_Store
 
 # mix phx.gen.cert self-signed certs for dev
 /apps/block_scout_web/priv/cert
+
+# edgscan packages
+erlang-solutions_*.deb
